# backend/src/controllers/games.js
@@ -15,7 +15,7 @@ var timers = {}
 
 module.exports = {
     async createSession (req, res) {
-        // #swagger.tags = ['Games']
+        // #swagger.tags = ['Session']
         // #swagger.summary = 'Create a new session.'
 
         if (!has(req.body, ['data']) || !has(JSON.parse(req.body.data), 'nbMinJoueurs') || !has(JSON.parse(req.body.data), 'nbMaxJoueurs') || !has(JSON.parse(req.body.data), 'dureeJour') || !has(JSON.parse(req.body.data), 'dureeNuit') || !has(JSON.parse(req.body.data), 'probaLG') || !has(JSON.parse(req.body.data), 'probaV') || !has(JSON.parse(req.body.data), 'probaS') || !has(JSON.parse(req.body.data), 'probaI') || !has(JSON.parse(req.body.data), 'probaC') || !has(JSON.parse(req.body.data), 'debutPartie')) {
@@ -89,7 +89,7 @@ module.exports = {
     },
 
     async joinSession (req, res){
-        // #swagger.tags = ['Users']
+        // #swagger.tags = ['Session']
         // #swagger.summary = 'Join an existing session'
 
         const username = req.login
@@ -113,7 +113,7 @@ module.exports = {
     },
     
     async getSessionParam (req, res){
-        // #swagger.tags = ['Games']
+        // #swagger.tags = ['Session']
         // #swagger.summary = 'Return the parameters of a session, including the number of players in the session and the roles percentages'
 
         if (!has(req.params, 'idSession')) throw new CodeError('You must specify the id of the session', status.BAD_REQUEST)
@@ -127,7 +127,7 @@ module.exports = {
     },
 
     async getUsersSession (req, res) {
-        // #swagger.tags = ['Games']
+        // #swagger.tags = ['Session']
         // #swagger.summary = 'Get the list of users in a session'
 
         let {idSession} = req.params
@@ -142,7 +142,7 @@ module.exports = {
     },
     
     async returnTimeLeft(req, res) {
-        // #swagger.tags = ['Games']
+        // #swagger.tags = ['Session']
         // #swagger.summary = 'Return the time left before the game starts'
 
         let {idSession} = req.params
